--- a/src/astar/AstarGUI.form
+++ b/src/astar/AstarGUI.form
@@ -7,7 +7,7 @@
         <Property name="title" type="java.lang.String" value="Start game"/>
         <Property name="alwaysOnTop" type="boolean" value="true"/>
         <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[250, 200]"/>
+          <Dimension value="[300, 250]"/>
         </Property>
         <Property name="resizable" type="boolean" value="false"/>
       </Properties>
@@ -19,19 +19,17 @@
                   <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Component id="label3" min="-2" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="label2" max="32767" attributes="0"/>
-                          <Component id="label1" pref="100" max="32767" attributes="0"/>
-                      </Group>
+                      <Component id="label1" min="-2" pref="100" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="InitBoardButton" pref="85" max="32767" attributes="0"/>
-                      <Component id="BoardSizeChoice" pref="85" max="32767" attributes="0"/>
-                      <Component id="ObstaclePercentageChoice" max="32767" attributes="0"/>
+                      <Component id="chooseFileButton" max="32767" attributes="0"/>
+                      <Component id="BoardSizeChoice" max="32767" attributes="0"/>
                       <Component id="TerrainVariationChoice" max="32767" attributes="0"/>
+                      <Component id="InitBoardButton" alignment="0" max="32767" attributes="0"/>
+                      <Component id="filenamelabel" alignment="1" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="56" max="32767" attributes="0"/>
+                  <EmptySpace pref="85" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -43,19 +41,18 @@
                       <Component id="label1" min="-2" max="-2" attributes="0"/>
                       <Component id="BoardSizeChoice" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="label2" min="-2" max="-2" attributes="0"/>
-                      <Component id="ObstaclePercentageChoice" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="label3" min="-2" max="-2" attributes="0"/>
                       <Component id="TerrainVariationChoice" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="40" max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="chooseFileButton" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="filenamelabel" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Component id="InitBoardButton" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
+                  <EmptySpace pref="78" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -68,14 +65,6 @@
             <Property name="alignment" type="int" value="2"/>
             <Property name="text" type="java.lang.String" value="Size"/>
           </Properties>
-        </Component>
-        <Component class="java.awt.Label" name="label2">
-          <Properties>
-            <Property name="alignment" type="int" value="2"/>
-            <Property name="text" type="java.lang.String" value="Obstacle %"/>
-          </Properties>
-        </Component>
-        <Component class="java.awt.Choice" name="ObstaclePercentageChoice">
         </Component>
         <Component class="java.awt.Button" name="InitBoardButton">
           <Properties>
@@ -92,6 +81,16 @@
           </Properties>
         </Component>
         <Component class="java.awt.Choice" name="TerrainVariationChoice">
+        </Component>
+        <Component class="java.awt.Button" name="chooseFileButton">
+          <Properties>
+            <Property name="label" type="java.lang.String" value="Choose bitmap"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="chooseFileButtonActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="java.awt.Label" name="filenamelabel">
         </Component>
       </SubComponents>
     </Container>
@@ -146,7 +145,9 @@
               <Component id="label5" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
               <Component id="HeuristicMultipliertextField" min="-2" pref="50" max="-2" attributes="0"/>
-              <EmptySpace pref="300" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
+              <Component id="recalculatebutton" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="240" max="32767" attributes="0"/>
           </Group>
           <Component id="BoardPanel" alignment="0" max="32767" attributes="0"/>
       </Group>
@@ -156,10 +157,16 @@
           <Group type="102" alignment="0" attributes="0">
               <Component id="BoardPanel" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="label5" min="-2" max="-2" attributes="0"/>
-                  <Component id="HeuristicMultipliertextField" min="-2" pref="21" max="-2" attributes="0"/>
-                  <Component id="ScoreLabel" alignment="1" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Group type="103" alignment="1" groupAlignment="0" attributes="0">
+                      <Component id="label5" min="-2" max="-2" attributes="0"/>
+                      <Component id="HeuristicMultipliertextField" min="-2" pref="21" max="-2" attributes="0"/>
+                      <Component id="ScoreLabel" alignment="1" min="-2" pref="24" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <Component id="recalculatebutton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
+                  </Group>
               </Group>
           </Group>
       </Group>
@@ -176,7 +183,7 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="425" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="419" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
@@ -206,6 +213,14 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Heuristic multiplier"/>
       </Properties>
+    </Component>
+    <Component class="java.awt.Button" name="recalculatebutton">
+      <Properties>
+        <Property name="label" type="java.lang.String" value="Redraw"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="recalculatebuttonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
