--- a/src/astar/AstarGUI.form
+++ b/src/astar/AstarGUI.form
@@ -147,7 +147,11 @@
               <Component id="HeuristicMultipliertextField" min="-2" pref="50" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
               <Component id="recalculatebutton" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="240" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
+              <Component id="label2" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="pathlengthlabel" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="120" max="32767" attributes="0"/>
           </Group>
           <Component id="BoardPanel" alignment="0" max="32767" attributes="0"/>
       </Group>
@@ -164,7 +168,11 @@
                       <Component id="ScoreLabel" alignment="1" min="-2" pref="24" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
-                      <Component id="recalculatebutton" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Component id="label2" min="-2" max="-2" attributes="0"/>
+                          <Component id="recalculatebutton" min="-2" max="-2" attributes="0"/>
+                          <Component id="pathlengthlabel" alignment="1" min="-2" max="-2" attributes="0"/>
+                      </Group>
                       <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -221,6 +229,13 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="recalculatebuttonActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="java.awt.Label" name="label2">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Path length"/>
+      </Properties>
+    </Component>
+    <Component class="java.awt.Label" name="pathlengthlabel">
     </Component>
   </SubComponents>
 </Form>
